Integration with Vaadin 6.3.1